--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\Payment\\Spgateway\\Core\\": "tests/",
+            "Tests\\Payment\\Spgateway\\Core\\": "tests/"
         }
     }
 }
